// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders without crashing 1`] = `
<div
  className="row"
  style={Object {}}
>
  <div>
    A
  </div>
</div>
`;

exports[`renders without crashing 2`] = `
<div
  className="row row_va_center"
  style={Object {}}
>
  <div>
    A
  </div>
</div>
`;
